[add] Funcionalidade sproduct + remove + inputs do cart

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Descubra a Excelência</h2> 
         <h1>Em cada passo</h1>
         <p>Aproveite as promoções!</p>
-        <button id="btn-buy" class="botao">Compre agora</button>
+        <button id="btn-buy" class="botao" onclick="window.location.href='/pages-html/shop.html'">Compre agora</button>
     </section>
 
     <section id="feature" class="section-p1">
@@ -61,134 +61,150 @@
     <section id="product1" class="section-p1">
         <h2>Produtos em alta</h2>
         <p>Descubra a Coleção Exclusiva de Tênis Premium</p>
-        <div class="product-container">
+        <div class="product-container"  >
             <div class="product">
-                <img class="img-object" src="assets/products/prod1.png" alt="product 1">
-                <div class="description">
-                    <span>Nike</span>
-                    <h3>Dunk Jumbo Mushroom</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                    </div>
-                    <h4>R$899,99</h4>
+                <div class="prod-card" onclick="devolveObj(0)">
+                    <img class="img-object" src="../assets/products/prod1.png" alt="product 1">
+                    <div class="description">
+                        <span>Nike</span>
+                        <h3 class="title-object">Dunk Jumbo Mushroom</h3>
+                        <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$899,99</h4>
+                    </div>     
                 </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
             </div>
             <div class="product">
-                <img class="img-object" src="assets/products/prod2.png" alt="product 2">
-                <div class="description">
-                    <span>Nike</span>
-                    <h3>Terminator Low Velvet Brown</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
+                <div class="prod-card" onclick="devolveObj(1)">
+                    <img class="img-object" src="../assets/products/prod2.png" alt="product 2">
+                    <div class="description">
+                        <span>Nike</span>
+                        <h3 class="title-object">Terminator Low Velvet Brown</h3>
+                        <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$1099,99</h4>
                     </div>
-                    <h4>R$1099,99</h4>
-                </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+                </div>   
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
             </div>
             <div class="product">
-                <img class="img-object" src="assets/products/prod3.png" alt="product 3">
-                <div class="description">
-                    <span>Adidas</span>
-                    <h3>Adi 2000</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
+                <div class="prod-card" onclick="devolveObj(2)">
+                    <img class="img-object" src="../assets/products/prod3.png" alt="product 3">
+                    <div class="description">
+                        <span>Adidas</span>
+                        <h3 class="title-object">Adi 2000</h3>
+                        <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$799,99</h4>
                     </div>
-                    <h4>R$799,99</h4>
-                </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+                </div>    
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+            </div>
+            <div class="product"> 
+                <div class="prod-card" onclick="devolveObj(3)">
+                    <img class="img-object" src="../assets/products/prod4.png" alt="product 4">
+                    <div class="description">
+                        <span>Nike</span>
+                        <h3 class="title-object">Air Force 1 Low Retro</h3>
+                        <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$1399,99</h4>
+                    </div>
+                </div> 
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
             </div>
             <div class="product">
-                <img class="img-object" src="assets/products/prod4.png" alt="product 4">
-                <div class="description">
-                    <span>Nike</span>
-                    <h3>Air Force 1 Low Retro</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
+                <div class="prod-card" onclick="devolveObj(4)">
+                    <img class="img-object" src="../assets/products/prod5.png" alt="product 5">
+                    <div class="description">
+                        <span>Adidas</span>
+                        <h3 class="title-object">Ozweego</h3>
+                        <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$999,99</h4>
                     </div>
-                    <h4>R$1399,99</h4>
                 </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
             </div>
             <div class="product">
-                <img class="img-object" src="assets/products/prod5.png" alt="product 5">
-                <div class="description">
-                    <span>Adidas</span>
-                    <h3>Ozweego</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
+                <div class="prod-card" onclick="devolveObj(5)">
+                    <img class="img-object" src="../assets/products/prod6.avif" alt="product 6">
+                     <div class="description">
+                        <span>Nike</span>
+                        <h3 class="title-object">Air Vapormax Triple Black</h3>
+                         <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$999,99</h4>
                     </div>
-                    <h4>R$999,99</h4>
-                </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+                </div>   
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
             </div>
             <div class="product">
-                <img class="img-object" src="assets/products/prod6.avif" alt="product 6">
-                <div class="description">
-                    <span>Nike</span>
-                    <h3>Air Vapormax Triple Black</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
+                <div class="prod-card" onclick="devolveObj(6)">
+                    <img class="img-object" src="../assets/products/prod7.png" alt="product 7">
+                    <div class="description">
+                        <span>Adidas</span>
+                        <h3 class="title-object">Forum Mod Low</h3>
+                        <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$899,99</h4>
                     </div>
-                    <h4>R$999,99</h4>
-                </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+                </div>  
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
             </div>
             <div class="product">
-                <img class="img-object" src="assets/products/prod7.png" alt="product 7">
-                <div class="description">
-                    <span>Adidas</span>
-                    <h3>Forum Mod Low</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
+                <div class="prod-card" onclick="devolveObj(7)">
+                    <img class="img-object" src="../assets/products/prod8.avif" alt="product 8">
+                    <div class="description">
+                        <span>Nike</span>
+                        <h3 class="title-object">Air Jordan 1 Low GS Rabbit</h3>
+                        <div class="star">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                            <img src="../assets/icons/star-solid.png" alt="">
+                        </div>
+                        <h4 class="price-object">R$999,99</h4>
                     </div>
-                    <h4>R$899,99</h4>
-                </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
-            </div>
-            <div class="product">
-                <img class="img-object" src="assets/products/prod8.avif" alt="product 8">
-                <div class="description">
-                    <span>Nike</span>
-                    <h3>Air Jordan 1 Low GS Rabbit</h3>
-                    <div class="star">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                        <img src="assets/icons/star-solid.png" alt="">
-                    </div>
-                    <h4>R$999,99</h4>
-                </div>
-                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+                </div>         
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
             </div>
         </div>
     </section>
@@ -197,7 +213,7 @@
         <div id="content">
             <h2>AIR MAX '98</h4>
         </div>
-        <button>Confira</button>
+        <button onclick="devolveObj(8)">Confira</button>
     </section>
 
     <section id="sm-banner">
