[add] Descrição produtos

--- a/pages-html/shop.html
+++ b/pages-html/shop.html
@@ -46,7 +46,7 @@
                         <h4 class="price-object">R$899,99</h4>
                     </div>     
                 </div>
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
             <div class="product">
                 <div class="prod-card" onclick="devolveObj(1)">
@@ -64,7 +64,7 @@
                         <h4 class="price-object">R$1099,99</h4>
                     </div>
                 </div>   
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
             <div class="product">
                 <div class="prod-card" onclick="devolveObj(2)">
@@ -82,7 +82,7 @@
                         <h4 class="price-object">R$799,99</h4>
                     </div>
                 </div>    
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
             <div class="product"> 
                 <div class="prod-card" onclick="devolveObj(3)">
@@ -100,7 +100,7 @@
                         <h4 class="price-object">R$1399,99</h4>
                     </div>
                 </div> 
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
             <div class="product">
                 <div class="prod-card" onclick="devolveObj(4)">
@@ -118,7 +118,7 @@
                         <h4 class="price-object">R$999,99</h4>
                     </div>
                 </div>
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
             <div class="product">
                 <div class="prod-card" onclick="devolveObj(5)">
@@ -136,7 +136,7 @@
                         <h4 class="price-object">R$999,99</h4>
                     </div>
                 </div>   
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
             <div class="product">
                 <div class="prod-card" onclick="devolveObj(6)">
@@ -154,7 +154,7 @@
                         <h4 class="price-object">R$899,99</h4>
                     </div>
                 </div>  
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
             <div class="product">
                 <div class="prod-card" onclick="devolveObj(7)">
@@ -172,7 +172,7 @@
                         <h4 class="price-object">R$999,99</h4>
                     </div>
                 </div>         
-                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho" onclick="window.location.href='/pages-html/cart.html'"></a>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
         </div>
     </section>
