[add] Rotas no footer (about e contact)

--- a/pages-html/blog.html
+++ b/pages-html/blog.html
@@ -57,7 +57,7 @@
             <div class="footer-col">
                 <h4>Encontre uma loja</h4>
                 <ul>
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="/pages-html/about.html">Sobre nós</a></li>
                     <li><a href="#">Serviços</a></li>
 
                 </ul>
@@ -68,7 +68,7 @@
                     <li><a href="#">Encontre seu tamanho</a></li>
                     <li><a href="#">Entregas</a></li>
                     <li><a href="#">Pedidos</a></li>
-                    <li><a href="#">Fale conosco</a></li>
+                    <li><a href="/pages-html/contact.html">Fale conosco</a></li>
                 </ul>
             </div>
             <div class="footer-col">
